implements jobs service
